--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,9 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10"]
+        python-version:
+          - 3.9
+          - "3.10"
 
     steps:
       - uses: actions/checkout@v2
