add typing extensions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 dynamic = ["version"]
 dependencies = [
     "fastapi-slim>=0.111.0",
+    "typing_extensions; python_version < '3.9'",
 ]
 
 [project.optional-dependencies]
