--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,9 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "fastapi-slim>=0.111.0",
-    "typing_extensions; python_version < '3.9'",
+    "fastapi>=0.100.0",
+    "pydantic>=2.0",
+    "typing_extensions",
 ]
 
 [project.optional-dependencies]
